--- a/.classpath
+++ b/.classpath
@@ -3,9 +3,15 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="test"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="lib/Azureus4.3.1.4.jar"/>
+	<classpathentry kind="lib" path="lib/Azureus4.3.1.4.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="http://cdn01.vuze.com/site/dev/javadoc/Vuze_4703-18/"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="lib" path="lib/swt.jar"/>
 	<classpathentry kind="lib" path="lib/mail.jar"/>
 	<classpathentry kind="lib" path="lib/junit-4.8.1.jar"/>
+	<classpathentry kind="lib" path="lib/hamcrest-library-1.1.jar"/>
+	<classpathentry kind="lib" path="lib/jmock-2.5.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
